--- a/app/globals.css
+++ b/app/globals.css
@@ -40,3 +40,24 @@ body {
     height: 2.5rem !important;
   }
 }
+
+@keyframes flow {
+  0% {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+
+  20% {
+    opacity: 1;
+  }
+
+  80% {
+    opacity: 1;
+    transform: translateX(100%);
+  }
+
+  100% {
+    opacity: 0;
+    transform: translateX(100%);
+  }
+}
